<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterUser">

    <!--

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overwatch_app"
        android:fontFamily="@font/overwatch_font"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/overwatch_grey"
        android:background="@color/overwatch_orange"
        android:layout_marginTop="75dp"
        />

        -->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/overwatch_logo"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/overwatch_logo_second"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/overwatch_orange"
        app:hintTextColor="@color/overwatch_orange"
        android:layout_marginTop="35dp"
        android:minHeight="48dp"
        >

        <EditText
            android:id="@+id/register_fullName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/overwatch_orange"
        app:hintTextColor="@color/overwatch_orange"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        >

        <EditText
            android:id="@+id/register_email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/overwatch_orange"
        app:hintTextColor="@color/overwatch_orange"
        android:minHeight="48dp">

        <EditText
            android:id="@+id/register_password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:background="@color/overwatch_orange"
        />



<LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="50dp"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/overwatch_orange"
                android:layout_marginStart="10dp"
                />
    </LinearLayout>

</LinearLayout>