<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#978D8D"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157">

        <androidx.cardview.widget.CardView
            android:id="@+id/genji"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <ImageView
                    style="@style/main_ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/genji"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/genji_textView"
                    style="@style/main_TextView"
                    android:text="@string/genji"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mei"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/mei" />

                <TextView
                    android:id="@+id/mei_textView"
                    style="@style/main_TextView"
                    android:text="@string/mei" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/moira"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/moira" />

                <TextView
                    android:id="@+id/moira_textView"
                    style="@style/main_TextView"
                    android:text="@string/moira" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cassidy"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/cassidy" />

                <TextView
                    android:id="@+id/cassidy_textView"
                    style="@style/main_TextView"
                    android:text="@string/cassidy" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/roadhog"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/roadhog" />

                <TextView
                    android:id="@+id/roadhog_textView"
                    style="@style/main_TextView"
                    android:text="@string/roadhog" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/reaper"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/reaper" />

                <TextView
                    android:id="@+id/reaper_textView"
                    style="@style/main_TextView"
                    android:text="Reaper" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mercy"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/mercy" />

                <TextView
                    android:id="@+id/mercy_textView"
                    style="@style/main_TextView"
                    android:text="@string/mercy" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/widow"
            style="@style/main_CardView"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/main_ImageView"
                    android:src="@drawable/widow" />

                <TextView
                    android:id="@+id/widow_textView"
                    style="@style/main_TextView"
                    android:text="@string/widow" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>