<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LogInUser">

   <!--
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overwatch_app"
        android:fontFamily="@font/overwatch_font"
        android:background="@color/overwatch_orange"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="35sp"
        android:height="150dp"
        android:textColor="@color/overwatch_grey"
        android:layout_marginTop="100dp"
        />
    -->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/overwatch_logo"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/overwatch_logo_second"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/overwatch_orange"
        app:hintTextColor="@color/overwatch_orange"
        android:layout_marginTop="75dp"
        android:minHeight="48dp"
        >

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/overwatch_orange"
        app:hintTextColor="@color/overwatch_orange"
        >

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/overwatch_grey"
        android:background="@color/overwatch_orange"/>

    <LinearLayout
        android:id="@+id/forgot_and_registe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/forgot_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="70dp"
            />

    </LinearLayout>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- or -"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />

    <FrameLayout
        android:id="@+id/google_signIn_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_and_views"
        android:backgroundTint="@color/google_blue"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In using Google"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/google_logo"/>

    </FrameLayout>

    -->

</LinearLayout>
