<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/moves_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/player_name_moves"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="My Hero Name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_image_moves" />

    <Button
        android:id="@+id/button_first_attack"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="move1"
        android:text="@string/move1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name_moves"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/button_second_attack"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/move2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first_attack"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_third_attack"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/move3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second_attack" />

    <TextView
        android:id="@+id/textView_Move"
        android:layout_width="247dp"
        android:layout_height="31dp"
        android:layout_marginTop="72dp"
        android:text="Pick your move:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/player_image_moves"
        android:layout_width="247dp"
        android:layout_height="155dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Move"
        app:srcCompat="@drawable/placeholder" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>